# bluenumbers

./: .gitignore  README.md  pyproject.toml
scripts/: sync.py  sync.sh
src/bluenumbers/: __init__.py  bluetooth_sig_loader.py  core.py  models.py  parser.py
src/bluenumbers/resources/: ad_types.json  company_identifiers.json  uuids.json
tests/: test_parser.py
