[project]
name = "bluenumbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Yibo Wei", email = "david_wyb2001@outlook.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
bluenumbers = "bluenumbers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
