[project]
name = "bluenumbers"
version = "0.1.1"
description = "Easily access Bluetooth SIG Assigned Numbers"
readme = "README.md"
authors = [{ name = "Yibo Wei", email = "david_wyb2001@outlook.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
bluenumbers = "bluenumbers:main"
bluenumbers-install = "bluenumbers.install_script:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
