[project]
name = "bluenumbers"
version = "0.1.10"
description = "Easily access Bluetooth SIG Assigned Numbers"
readme = "README.md"
authors = [{ name = "Yibo Wei", email = "david_wyb2001@outlook.com" }]
requires-python = ">=3.9"
dependencies = ["pydantic>=2.10.6", "pyyaml>=6.0.2"]

[project.scripts]
bluenumbers = "bluenumbers:main"
bluenumbers-install = "bluenumbers.install_script:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.396", "pytest>=8.3.5", "ruff>=0.11.0"]
